tests/toylang/neg/000914_mutation.toylang
program a = { if else then sleep; } .
